<resources>
    <string name="app_name">Uphaar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="lblTxt">Home</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Donation</string>
    <string name="menu_slideshow">Volunteer</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">AboutUs</string>
    <string name="menu_send">Contact Us</string>
    <string name="raise_your_hands">Raise Your Hands</string>
    <string name="send">Send</string>
    <string name="with_the_aim_of_helping_as_many_people_as_possible_we_always_lack_enthusiastic_volunteers_please_contact_us">With the aim of helping as many people as possible, we always lack enthusiastic volunteers. Please contact us.</string>
    <string name="password">Password</string>
    <string name="contactnumber">ContactNumber</string>
    <string name="location">Location</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="become_a_volunteer">Become A Volunteer</string>
    <string name="let_s_talk_don_t_hesitate_to_reach_out_with_the_contact_information_below_or_send_a_message_using_the_form">Let’s talk 👋 Don’t hesitate to reach out with the contact information below, or send a message using the form.</string>
    <string name="get_in_touch">Get in Touch</string>
    <string name="khalapur">Khalapur</string>
    <string name="pillai_hoc_college_of_engineering_and_tech">Pillai HOC College of Engineering and Tech</string>
    <string name="rasayni">Rasayni</string>
    <string name="message">Message</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
</resources>
